--- a/Week-1/Exercise_1.2/index.html
+++ b/Week-1/Exercise_1.2/index.html
@@ -4,11 +4,80 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Exercise 1.2</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<nav>
+			<ul>
+				<li class="list-item">
+					<i class="fa-solid fa-bars"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-solid fa-house-chimney"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-solid fa-magnifying-glass"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-solid fa-volume-high"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-solid fa-user"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-solid fa-gear"></i>
+				</li>
+				<li class="list-item">
+					<i class="fa-brands fa-spotify"></i>
+				</li>
+				<li class="list-item" style="padding-bottom: 30px">
+					<i class="fa-brands fa-soundcloud"></i>
+				</li>
+			</ul>
+		</nav>
+		<main>
+			<section class="topsection">
+				<img class="playlistimage" src="images/cattyboard.jpeg" alt="Playlist_Image" style="width: 200px" />
+				<div>
+					<div class="toptextdiv">
+						<h1>CattyBoard Top 100 Single Charts (11.06.36)</h1>
+						<h4 style="margin-bottom: 0px">Unknown Artist</h4>
+						<h4 style="margin-top: 0px">2016 . Charts . 100 songs</h4>
+					</div>
+					<div class="buttondiv">
+						<span><i class="fa-solid fa-play"></i>&nbsp;&nbsp;&nbsp;Play all</span>
+						<span><i class="fa-solid fa-plus"></i>&nbsp;&nbsp;&nbsp;Add to</span>
+						<span><i class="fa-solid fa-ellipsis"></i>&nbsp;&nbsp;&nbsp;More</span>
+					</div>
+				</div>
+			</section>
+			<section class="middlesection">
+				<ol>
+					<li><span>1. One Dance</span><span>Crake feat CatKid & Cyla</span><span>2.54</span><span class="syncbutton">CATTY CLOUD SYNC</span></li>
+					<li style="background-color: #f0f0f0"><span>2. Panda</span><span>Cattee</span><span>4.06</span><span class="syncbutton">CATTY CLOUD SYNC</span></li>
+					<li><span>3. Can't Stop the Feeling!</span><span>Catin Cimberlake</span><span>3.56</span><span class="syncbutton">CATTY CLOUD SYNC</span></li>
+					<li style="background-color: #f0f0f0"><span>4. Work From Home</span><span>Cat Harmony feat Colla</span><span>3.34</span><span class="syncbutton">CATTY CLOUD SYNC</span></li>
+				</ol>
+			</section>
+			<section class="bottomsection">
+				<img class="bottomsectionimage" src="images/cattyboard.jpeg" alt="Current_Song_Image" />
+				<div class="bottomtextdiv">
+					<h4 style="margin-bottom: 30px">If It Ain't Love</h4>
+					<h4>Catson Derulo</h4>
+				</div>
+				<div class="bottombuttondiv">
+					<span><i class="fa-solid fa-backward-step"></i></span>
+					<span><i class="fa-solid fa-pause"></i></span>
+					<span><i class="fa-solid fa-forward-step"></i></span>
+					<span><i class="fa-solid fa-arrow-rotate-right"></i></span>
+					<span><i class="fa-solid fa-shuffle"></i></span>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
