--- a/Week-2/Exercise_2.1/index.html
+++ b/Week-2/Exercise_2.1/index.html
@@ -10,48 +10,88 @@
 	</head>
 	<body>
 		<header>
-			<h1></h1>
+			<h1>Lorem ipsum dolor sit amet consectetur.</h1>
 		</header>
 		<main>
 			<section>
 				<section>
 					<article>
-						<p></p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati in laborum, doloribus quibusdam sequi maiores voluptatibus velit excepturi expedita a sunt molestiae hic
+							neque ducimus tenetur esse praesentium assumenda commodi ad. Nam cumque dignissimos accusamus blanditiis possimus non assumenda corporis?
+						</p>
 						<figure>
-							<img src="" alt="" />
-							<figcaption></figcaption>
+							<img src="image.jpg" alt="This is an image from my Exercise 2.2" width="250px" height="250px" />
+							<figcaption>This is an image from my Exercise 2.2</figcaption>
 						</figure>
 					</article>
 				</section>
 				<section>
 					<article>
-						<h1></h1>
-						<p></p>
-						<a href="http://" target="_blank" rel="noopener noreferrer"></a>
+						<h1>Heading 1 - The Beginning</h1>
+						<p>
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti magnam saepe earum facere asperiores omnis, ea dignissimos officiis aliquam quas eligendi id vel cum
+							animi alias minima accusantium doloremque reiciendis officia quis deserunt! Harum pariatur non porro, dolores dolor est qui! Cumque quo nulla distinctio.
+							<a href="http://kiranaforhome.netlify.app" target="_blank" rel="noopener noreferrer">Read More</a>
+						</p>
 					</article>
 					<article>
-						<h1></h1>
-						<p></p>
-						<a href="http://" target="_blank" rel="noopener noreferrer"></a>
+						<h1>Heading 2 - The Middle</h1>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, ut. Sapiente hic expedita autem enim iure doloremque obcaecati similique alias animi harum, rerum praesentium
+							consequatur odit voluptas repudiandae et delectus qui eius impedit incidunt, fugit voluptatem ad repellendus. Tempora molestias ea ratione obcaecati quas aperiam cupiditate
+							unde laboriosam velit veritatis. <a href="http://spaceonova.com" target="_blank" rel="noopener noreferrer">Read More</a>
+						</p>
 					</article>
 					<article>
-						<h1></h1>
-						<p></p>
-						<a href="http://" target="_blank" rel="noopener noreferrer"></a>
+						<h1>Heading 3 - The End</h1>
+						<p>
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo harum accusantium provident, fugit officia cumque modi iste non numquam magni ipsa asperiores alias quibusdam
+							officiis iusto aut voluptate? Dolor harum saepe quas, neque eaque voluptate. <a href="http://servicebay.tech" target="_blank" rel="noopener noreferrer">Read More</a>
+						</p>
 					</article>
 				</section>
 			</section>
 			<section>
 				<form action="" method="get">
-					<input type="radio" name="" id="" />
-					<input type="text" name="" id="" />
-					<input type="email" name="" id="" />
-					<input type="tel" name="" id="" />
-					<input type="password" name="" id="" />
-					<select name="" id="">
-						<option value=""></option>
-					</select>
-					<input type="checkbox" name="" id="" />
+					<fieldset style="border: none">
+						<legend style="display: none">Registration Details</legend>
+						<p>
+							<input type="radio" name="for_salutation" id="mr" />
+							<label for="mr">Mr.</label>
+							<input type="radio" name="for_salutation" id="ms" />
+							<label for="ms">Ms.</label>
+						</p>
+						<p>
+							<label for="name">Name</label>
+							<input type="text" name="" id="name" />
+						</p>
+						<p>
+							<label for="email">Email</label>
+							<input type="email" name="" id="email" />
+						</p>
+						<p>
+							<label for="mobileNumber">Mobile</label>
+							<input type="tel" name="" id="mobileNumber" />
+						</p>
+						<p>
+							<label for="pass">Password</label>
+							<input type="password" name="" id="pass" />
+						</p>
+						<p>
+							<label for="country"></label>
+							<select name="" id="country">
+								<option value="India">India</option>
+								<option value="USA">USA</option>
+								<option value="UK">UK</option>
+							</select>
+						</p>
+						<p>
+							<input type="checkbox" name="" id="tnc" />
+							<label for="tnc">I accept the TnC</label>
+						</p>
+					</fieldset>
+					<button type="submit">Submit</button>
 				</form>
 			</section>
 		</main>
