added the css, almost complete

--- a/Week-2/Exercise_2.1/index.html
+++ b/Week-2/Exercise_2.1/index.html
@@ -10,11 +10,11 @@
 	</head>
 	<body>
 		<header>
-			<h1>Lorem ipsum dolor sit amet consectetur.</h1>
+			<h1>Lorem ipsum dolor sit amet</h1>
 		</header>
 		<main>
-			<section>
-				<section>
+			<section class="firstsection">
+				<section class="one">
 					<article>
 						<p>
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati in laborum, doloribus quibusdam sequi maiores voluptatibus velit excepturi expedita a sunt molestiae hic
@@ -26,13 +26,13 @@
 						</figure>
 					</article>
 				</section>
-				<section>
+				<section class="two">
 					<article>
 						<h1>Heading 1 - The Beginning</h1>
 						<p>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti magnam saepe earum facere asperiores omnis, ea dignissimos officiis aliquam quas eligendi id vel cum
 							animi alias minima accusantium doloremque reiciendis officia quis deserunt! Harum pariatur non porro, dolores dolor est qui! Cumque quo nulla distinctio.
-							<a href="http://kiranaforhome.netlify.app" target="_blank" rel="noopener noreferrer">Read More</a>
+							<a href="https://kiranaforhome.netlify.app" target="_blank" rel="noopener noreferrer">Read More</a>
 						</p>
 					</article>
 					<article>
@@ -40,19 +40,45 @@
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, ut. Sapiente hic expedita autem enim iure doloremque obcaecati similique alias animi harum, rerum praesentium
 							consequatur odit voluptas repudiandae et delectus qui eius impedit incidunt, fugit voluptatem ad repellendus. Tempora molestias ea ratione obcaecati quas aperiam cupiditate
-							unde laboriosam velit veritatis. <a href="http://spaceonova.com" target="_blank" rel="noopener noreferrer">Read More</a>
+							unde laboriosam velit veritatis. <a href="https://spaceonova.com" target="_blank" rel="noopener noreferrer">Read More</a>
 						</p>
 					</article>
 					<article>
 						<h1>Heading 3 - The End</h1>
 						<p>
 							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo harum accusantium provident, fugit officia cumque modi iste non numquam magni ipsa asperiores alias quibusdam
-							officiis iusto aut voluptate? Dolor harum saepe quas, neque eaque voluptate. <a href="http://servicebay.tech" target="_blank" rel="noopener noreferrer">Read More</a>
+							officiis iusto aut voluptate? Dolor harum saepe quas, neque eaque voluptate. <a href="https://servicebay.tech" target="_blank" rel="noopener noreferrer">Read More</a>
 						</p>
 					</article>
 				</section>
 			</section>
-			<section>
+			<section class="secondsection">
+				<article class="item1">
+					<h1>Heading 1 - The Beginning</h1>
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti magnam saepe earum facere asperiores omnis, ea dignissimos officiis aliquam quas eligendi id vel cum animi
+						alias minima accusantium doloremque reiciendis officia quis deserunt! Harum pariatur non porro, dolores dolor est qui! Cumque quo nulla distinctio.
+						<a href="https://kiranaforhome.netlify.app" target="_blank" rel="noopener noreferrer">Read More</a>
+					</p>
+				</article>
+				<article class="item2">
+					<h1>Heading 2 - The Middle</h1>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, ut. Sapiente hic expedita autem enim iure doloremque obcaecati similique alias animi harum, rerum praesentium
+						consequatur odit voluptas repudiandae et delectus qui eius impedit incidunt, fugit voluptatem ad repellendus. Tempora molestias ea ratione obcaecati quas aperiam cupiditate
+						unde laboriosam velit veritatis. <a href="https://spaceonova.com" target="_blank" rel="noopener noreferrer">Read More</a>
+					</p>
+				</article>
+				<article class="item3">
+					<h1>Heading 3 - The End</h1>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo harum accusantium provident, fugit officia cumque modi iste non numquam magni ipsa asperiores alias quibusdam
+						officiis iusto aut voluptate? Dolor harum saepe quas, neque eaque voluptate. <a href="https://servicebay.tech" target="_blank" rel="noopener noreferrer">Read More</a>
+					</p>
+				</article>
+			</section>
+			<section class="thirdsection">
+				<h1>Register Yourself Here</h1>
 				<form action="" onsubmit="alert('Successfully Submitted')" method="post">
 					<fieldset style="border: none; padding: 0; margin: 0">
 						<legend style="display: none">Registration Details</legend>
@@ -91,13 +117,22 @@
 							<label for="tnc">I accept the TnC</label>
 						</p>
 					</fieldset>
-					<button type="submit" style="margin: 0">Submit</button>
+					<button type="submit" class="mybutton">Submit</button>
 				</form>
 			</section>
 		</main>
 		<footer>
-			<p></p>
-			<nav></nav>
+			<div>
+				<h1>About Me</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem sit perspiciatis officiis, voluptatem iure quas! Neque ad possimus nostrum quas.</p>
+			</div>
+			<nav>
+				<ol>
+					<li><a href="https://kiranaforhome.netlify.app" target="_blank" rel="noopener noreferrer">Home</a></li>
+					<li><a href="https://spaceonova.com" target="_blank" rel="noopener noreferrer">More About Me</a></li>
+					<li><a href="https://servicebay.tech" target="_blank" rel="noopener noreferrer">FAQs</a></li>
+				</ol>
+			</nav>
 		</footer>
 	</body>
 </html>
